// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test AuditDetail/SqlFileStatementOverview should match snapshot 1`] = `
<div>
  <section
    class="css-16gjh2w"
  >
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        <div
          class="page-title-wrapper"
        >
          <span
            class="custom-icon css-u3jcp4"
            role="img"
          >
            <svg
              fill="none"
              height="24"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M491.353792 556.019275a80.247527 80.247527 0 0 0-15.582045-20.256658 56.61476 56.61476 0 0 0-19.996956-11.167131 70.6386 70.6386 0 0 0-21.814862-3.37611 60.250571 60.250571 0 0 0-27.787979 7.01192 64.405782 64.405782 0 0 0-19.996956 16.361146 88.817652 88.817652 0 0 0-12.985037 22.853665 82.584834 82.584834 0 0 0-5.713416 25.970074 143.095105 143.095105 0 0 0 0 21.814861 102.32209 102.32209 0 0 0 7.27162 30.125286 85.441542 85.441542 0 0 0 14.543241 23.113365 53.498352 53.498352 0 0 0 20.516359 14.02384 74.01471 74.01471 0 0 0 29.086482 4.934314 60.250571 60.250571 0 0 0 17.140249-1.558205l16.101445-4.674613-20.256657-19.477555 33.761095-34.799899 12.205935 12.985037a106.737002 106.737002 0 0 0 3.376109-11.686533 127.25336 127.25336 0 0 0 1.558205-20.776059 90.895257 90.895257 0 0 0-11.686533-51.940147z"
                fill="#4583FF"
              />
              <path
                d="M743.523206 0H213.474005a85.441542 85.441542 0 0 0-85.441542 85.441542v298.655846H42.590921A42.590921 42.590921 0 0 0 0 426.688308v363.58103A42.850621 42.850621 0 0 0 42.590921 831.042354h85.441542v106.737002a85.181841 85.181841 0 0 0 85.441542 85.181841h725.344154a85.181841 85.181841 0 0 0 85.181841-85.181841V282.5544zM158.417449 732.615775a165.169668 165.169668 0 0 1-28.567081-3.895511 82.065432 82.065432 0 0 1-25.970074-10.64773 75.572914 75.572914 0 0 1-22.074562-23.113366 72.716206 72.716206 0 0 1-11.946234-31.94319l-2.856708-17.140249h51.940147a135.304083 135.304083 0 0 0 2.077606 14.283541A36.358103 36.358103 0 0 0 129.850368 675.221912a37.396906 37.396906 0 0 0 19.737256 11.426833 119.722039 119.722039 0 0 0 34.020796 2.597007 94.790768 94.790768 0 0 0 25.970074-3.895511 25.970074 25.970074 0 0 0 15.582044-10.388029 29.605884 29.605884 0 0 0 3.895511-16.880548 25.970074 25.970074 0 0 0-3.116409-11.686533 25.970074 25.970074 0 0 0-8.310424-8.050723 69.340096 69.340096 0 0 0-14.802942-5.973117q-9.349226-2.856708-25.970073-6.232818l-34.540198-6.752219c-10.907431-2.337307-21.03576-4.674613-30.384986-7.27162a61.808775 61.808775 0 0 1-22.334263-10.647731 43.110322 43.110322 0 0 1-13.244738-15.322343 57.134162 57.134162 0 0 1-6.232817-17.140249 86.480345 86.480345 0 0 1 0-18.698453 71.158002 71.158002 0 0 1 12.985036-41.552117 73.495308 73.495308 0 0 1 25.970074-22.074563 119.202638 119.202638 0 0 1 29.346183-10.128328 185.945727 185.945727 0 0 1 36.358103-3.116409 171.142785 171.142785 0 0 1 38.95511 4.414912 86.220644 86.220644 0 0 1 28.30738 11.946234 88.817652 88.817652 0 0 1 20.776059 19.996957 46.226731 46.226731 0 0 1 10.38803 21.555161l2.337306 16.880548H222.30383a62.068476 62.068476 0 0 0-5.713417-14.02384 25.970074 25.970074 0 0 0-8.829825-8.570124 60.769972 60.769972 0 0 0-16.620847-4.934314 193.996449 193.996449 0 0 0-20.776059-2.077606 103.880294 103.880294 0 0 0-29.086482 3.116409 35.059599 35.059599 0 0 0-19.217854 9.608927 22.334263 22.334263 0 0 0-6.232818 13.244737 19.477555 19.477555 0 0 0 1.817905 11.946234 18.958154 18.958154 0 0 0 8.050723 9.349227 65.704286 65.704286 0 0 0 17.399949 5.973117c8.050723 2.077606 15.062643 3.63581 21.295461 4.674613l28.826781 4.674613a207.760588 207.760588 0 0 1 32.202891 7.791022 99.984783 99.984783 0 0 1 28.307381 14.283541 64.405782 64.405782 0 0 1 19.477555 22.593964 69.080396 69.080396 0 0 1 5.713416 34.020796 85.960943 85.960943 0 0 1-9.349227 36.098402 58.952067 58.952067 0 0 1-19.996956 22.593964 74.01471 74.01471 0 0 1-25.970074 10.64773 210.357596 210.357596 0 0 1-32.462592 3.635811c-11.426832 0.259701-22.074563 0.259701-32.722292-0.259701zM960.892721 938.818159a21.29546 21.29546 0 0 1-21.29546 21.29546H213.474005a22.593964 22.593964 0 0 1-15.322344-6.232818 21.555161 21.555161 0 0 1-6.232817-15.062642V831.042354H831.042354a42.590921 42.590921 0 0 0 42.59092-42.590921v-363.58103A42.33122 42.33122 0 0 0 831.042354 384.097388H191.918844V85.441542a21.555161 21.555161 0 0 1 6.232817-15.062643 21.555161 21.555161 0 0 1 15.322344-6.492518H716.77403l8.570124 8.829825v128.032463a97.907177 97.907177 0 0 0 98.166878 97.907177h126.474258l10.128329 10.128328z m-400.198833-236.32767l-33.761096 34.799899-19.737256-20.516358c-6.752219 3.116409-15.062643 6.492518-24.671569 10.388029a132.966777 132.966777 0 0 1-40.773016 6.232818 121.280243 121.280243 0 0 1-55.316257-10.128329 116.086229 116.086229 0 0 1-38.435708-28.826781 113.748922 113.748922 0 0 1-22.334264-41.292417 155.820441 155.820441 0 0 1-7.531321-47.784936 181.790515 181.790515 0 0 1 5.453715-45.707329 122.578747 122.578747 0 0 1 21.555161-43.629724 112.450418 112.450418 0 0 1 37.656607-30.644686 110.632513 110.632513 0 0 1 51.940147-12.205935 115.826528 115.826528 0 0 1 39.214811 5.973117 131.408572 131.408572 0 0 1 36.098402 19.217854 93.232564 93.232564 0 0 1 28.04768 33.501395 170.363682 170.363682 0 0 1 15.062643 43.629724 162.832361 162.832361 0 0 1-8.829825 88.557951l-5.713417 14.28354z m238.405275-21.555161v51.940148H597.311692v-259.700736h49.343139v207.760588z"
                fill="#4583FF"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="extra"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span>
            返回工单详情
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-row ant-row-space-between css-156vlto css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="audit-result-filter-container-borderless clear-padding css-1c0dogt"
      >
        <div
          class="custom-segmented-filter-wrapper audit-result-filter-option"
        >
          <div
            class="custom-segmented-filter-item custom-segmented-filter-item-checked"
          >
            全部状态
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            准备执行
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            正在执行
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            执行成功
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            执行失败
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            人工执行
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            正在中止
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            中止成功
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            中止失败
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-actions-wrap"
      >
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
            style="padding: 0px 6px 0px 10px;"
            type="button"
          >
            <div
              class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 2px;"
              >
                筛选
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="custom-icon custom-icon-arrow-down css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical audit-result-actions-divider"
            role="separator"
          />
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="css-rf9vxh"
          >
            数据去重
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars basic-button-wrapper css-geipcv"
            type="button"
          >
            <div
              class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 5px;"
              >
                <span
                  class="custom-icon custom-icon-download css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1.75 11.0833H12.25V12.25H1.75V11.0833ZM7.58333 7.68363L11.1247 4.14163L11.9496 4.96646L7 9.91663L2.05042 4.96704L2.87525 4.14163L6.41667 7.68246V1.16663H7.58333V7.68363Z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 5px;"
              >
                下载
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="custom-icon custom-icon-arrow-down css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <section
      class="css-1r1dawj"
    >
      <div
        class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning css-dev-only-do-not-override-bj9uhl"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 100px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell ellipsis-column-large-width"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell exec-status-column"
                          scope="col"
                        >
                          执行结果
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="4"
                        >
                          <div
                            class="ant-table-expanded-row-fixed"
                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                          />
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`test AuditDetail/SqlFileStatementOverview should match snapshot 2`] = `
<div>
  <section
    class="css-16gjh2w"
  >
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        <div
          class="page-title-wrapper"
        >
          <span
            class="custom-icon css-u3jcp4"
            role="img"
          >
            <svg
              fill="none"
              height="24"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M491.353792 556.019275a80.247527 80.247527 0 0 0-15.582045-20.256658 56.61476 56.61476 0 0 0-19.996956-11.167131 70.6386 70.6386 0 0 0-21.814862-3.37611 60.250571 60.250571 0 0 0-27.787979 7.01192 64.405782 64.405782 0 0 0-19.996956 16.361146 88.817652 88.817652 0 0 0-12.985037 22.853665 82.584834 82.584834 0 0 0-5.713416 25.970074 143.095105 143.095105 0 0 0 0 21.814861 102.32209 102.32209 0 0 0 7.27162 30.125286 85.441542 85.441542 0 0 0 14.543241 23.113365 53.498352 53.498352 0 0 0 20.516359 14.02384 74.01471 74.01471 0 0 0 29.086482 4.934314 60.250571 60.250571 0 0 0 17.140249-1.558205l16.101445-4.674613-20.256657-19.477555 33.761095-34.799899 12.205935 12.985037a106.737002 106.737002 0 0 0 3.376109-11.686533 127.25336 127.25336 0 0 0 1.558205-20.776059 90.895257 90.895257 0 0 0-11.686533-51.940147z"
                fill="#4583FF"
              />
              <path
                d="M743.523206 0H213.474005a85.441542 85.441542 0 0 0-85.441542 85.441542v298.655846H42.590921A42.590921 42.590921 0 0 0 0 426.688308v363.58103A42.850621 42.850621 0 0 0 42.590921 831.042354h85.441542v106.737002a85.181841 85.181841 0 0 0 85.441542 85.181841h725.344154a85.181841 85.181841 0 0 0 85.181841-85.181841V282.5544zM158.417449 732.615775a165.169668 165.169668 0 0 1-28.567081-3.895511 82.065432 82.065432 0 0 1-25.970074-10.64773 75.572914 75.572914 0 0 1-22.074562-23.113366 72.716206 72.716206 0 0 1-11.946234-31.94319l-2.856708-17.140249h51.940147a135.304083 135.304083 0 0 0 2.077606 14.283541A36.358103 36.358103 0 0 0 129.850368 675.221912a37.396906 37.396906 0 0 0 19.737256 11.426833 119.722039 119.722039 0 0 0 34.020796 2.597007 94.790768 94.790768 0 0 0 25.970074-3.895511 25.970074 25.970074 0 0 0 15.582044-10.388029 29.605884 29.605884 0 0 0 3.895511-16.880548 25.970074 25.970074 0 0 0-3.116409-11.686533 25.970074 25.970074 0 0 0-8.310424-8.050723 69.340096 69.340096 0 0 0-14.802942-5.973117q-9.349226-2.856708-25.970073-6.232818l-34.540198-6.752219c-10.907431-2.337307-21.03576-4.674613-30.384986-7.27162a61.808775 61.808775 0 0 1-22.334263-10.647731 43.110322 43.110322 0 0 1-13.244738-15.322343 57.134162 57.134162 0 0 1-6.232817-17.140249 86.480345 86.480345 0 0 1 0-18.698453 71.158002 71.158002 0 0 1 12.985036-41.552117 73.495308 73.495308 0 0 1 25.970074-22.074563 119.202638 119.202638 0 0 1 29.346183-10.128328 185.945727 185.945727 0 0 1 36.358103-3.116409 171.142785 171.142785 0 0 1 38.95511 4.414912 86.220644 86.220644 0 0 1 28.30738 11.946234 88.817652 88.817652 0 0 1 20.776059 19.996957 46.226731 46.226731 0 0 1 10.38803 21.555161l2.337306 16.880548H222.30383a62.068476 62.068476 0 0 0-5.713417-14.02384 25.970074 25.970074 0 0 0-8.829825-8.570124 60.769972 60.769972 0 0 0-16.620847-4.934314 193.996449 193.996449 0 0 0-20.776059-2.077606 103.880294 103.880294 0 0 0-29.086482 3.116409 35.059599 35.059599 0 0 0-19.217854 9.608927 22.334263 22.334263 0 0 0-6.232818 13.244737 19.477555 19.477555 0 0 0 1.817905 11.946234 18.958154 18.958154 0 0 0 8.050723 9.349227 65.704286 65.704286 0 0 0 17.399949 5.973117c8.050723 2.077606 15.062643 3.63581 21.295461 4.674613l28.826781 4.674613a207.760588 207.760588 0 0 1 32.202891 7.791022 99.984783 99.984783 0 0 1 28.307381 14.283541 64.405782 64.405782 0 0 1 19.477555 22.593964 69.080396 69.080396 0 0 1 5.713416 34.020796 85.960943 85.960943 0 0 1-9.349227 36.098402 58.952067 58.952067 0 0 1-19.996956 22.593964 74.01471 74.01471 0 0 1-25.970074 10.64773 210.357596 210.357596 0 0 1-32.462592 3.635811c-11.426832 0.259701-22.074563 0.259701-32.722292-0.259701zM960.892721 938.818159a21.29546 21.29546 0 0 1-21.29546 21.29546H213.474005a22.593964 22.593964 0 0 1-15.322344-6.232818 21.555161 21.555161 0 0 1-6.232817-15.062642V831.042354H831.042354a42.590921 42.590921 0 0 0 42.59092-42.590921v-363.58103A42.33122 42.33122 0 0 0 831.042354 384.097388H191.918844V85.441542a21.555161 21.555161 0 0 1 6.232817-15.062643 21.555161 21.555161 0 0 1 15.322344-6.492518H716.77403l8.570124 8.829825v128.032463a97.907177 97.907177 0 0 0 98.166878 97.907177h126.474258l10.128329 10.128328z m-400.198833-236.32767l-33.761096 34.799899-19.737256-20.516358c-6.752219 3.116409-15.062643 6.492518-24.671569 10.388029a132.966777 132.966777 0 0 1-40.773016 6.232818 121.280243 121.280243 0 0 1-55.316257-10.128329 116.086229 116.086229 0 0 1-38.435708-28.826781 113.748922 113.748922 0 0 1-22.334264-41.292417 155.820441 155.820441 0 0 1-7.531321-47.784936 181.790515 181.790515 0 0 1 5.453715-45.707329 122.578747 122.578747 0 0 1 21.555161-43.629724 112.450418 112.450418 0 0 1 37.656607-30.644686 110.632513 110.632513 0 0 1 51.940147-12.205935 115.826528 115.826528 0 0 1 39.214811 5.973117 131.408572 131.408572 0 0 1 36.098402 19.217854 93.232564 93.232564 0 0 1 28.04768 33.501395 170.363682 170.363682 0 0 1 15.062643 43.629724 162.832361 162.832361 0 0 1-8.829825 88.557951l-5.713417 14.28354z m238.405275-21.555161v51.940148H597.311692v-259.700736h49.343139v207.760588z"
                fill="#4583FF"
              />
            </svg>
          </span>
          create_table_if_not_exist.sql
        </div>
      </div>
      <div
        class="extra"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span>
            返回工单详情
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-row ant-row-space-between css-156vlto css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="audit-result-filter-container-borderless clear-padding css-1c0dogt"
      >
        <div
          class="custom-segmented-filter-wrapper audit-result-filter-option"
        >
          <div
            class="custom-segmented-filter-item custom-segmented-filter-item-checked"
          >
            全部状态
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            准备执行
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            正在执行
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            执行成功
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            执行失败
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            人工执行
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            正在中止
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            中止成功
          </div>
          <div
            class="custom-segmented-filter-item"
          >
            中止失败
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-actions-wrap"
      >
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
            style="padding: 0px 6px 0px 10px;"
            type="button"
          >
            <div
              class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 2px;"
              >
                筛选
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="custom-icon custom-icon-arrow-down css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical audit-result-actions-divider"
            role="separator"
          />
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 12px;"
        >
          <div
            class="css-rf9vxh"
          >
            数据去重
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars basic-button-wrapper css-geipcv"
            type="button"
          >
            <div
              class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 5px;"
              >
                <span
                  class="custom-icon custom-icon-download css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1.75 11.0833H12.25V12.25H1.75V11.0833ZM7.58333 7.68363L11.1247 4.14163L11.9496 4.96646L7 9.91663L2.05042 4.96704L2.87525 4.14163L6.41667 7.68246V1.16663H7.58333V7.68363Z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 5px;"
              >
                下载
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="custom-icon custom-icon-arrow-down css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <section
      class="css-1r1dawj"
    >
      <div
        class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 100px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell ellipsis-column-large-width"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell exec-status-column"
                          scope="col"
                        >
                          执行结果
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                        <td
                          class="ant-table-cell ellipsis-column-large-width"
                        >
                          <div
                            class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
                          >
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-bj9uhl"
                            >
                              <span>
                                <span
                                  class="hljs-keyword"
                                >
                                  SELECT
                                </span>
                                 
                                <span
                                  class="hljs-number"
                                >
                                  1
                                </span>
                                ;
                              </span>
                            </div>
                            <div
                              class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="audit-result-wrapper"
                          >
                            <div
                              class=" css-1v03opz"
                            >
                              <div
                                class="css-1avyf41"
                              >
                                <span
                                  class="icon-wrapper"
                                >
                                  <svg
                                    fill="none"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
                                      fill="#41BF9A"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="text-wrapper"
                                >
                                  test message
                                </span>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell exec-status-column"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-bj9uhl"
                          >
                            准备执行
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
            >
              <li
                class="ant-pagination-total-text"
              >
                <span>
                  共 1 条数据
                </span>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="Previous Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-next ant-pagination-disabled"
                title="Next Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-options"
              >
                <div
                  aria-label="Page Size"
                  class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Page Size"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        role="combobox"
                        type="search"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="20 / page"
                    >
                      20 / page
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down ant-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </section>
  </section>
</div>
`;
